--- a/result.html
+++ b/result.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 
-<body style="background-image: url('images/result.png');background-size:cover; background-repeat: no-repeat;">
+<body style="background-image: url('images/result1.png');background-size:cover; background-repeat: no-repeat;">
 
 </body>
 
