--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 </head>
 
-<body style="background-attachment: fixed;background-position: center center;background-image: url('images/background.png');background-size:cover; background-repeat: no-repeat;">
+<body style="background-attachment: fixed;background-position: center center;background-image: url('images/background.png');background-size:auto; background-repeat: no-repeat;">
     <div style="margin-top: 4%;">
         <center>
             <div class="col-md-6 col-lg-5">
