--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
             var Password = document.getElementById("passwordField").value;
             if (Username == '4190283' &&
                 Password == '101458') {
-                window.open("result1.html");
+                window.open("4190283.html");
             } else if (Username == '4190283' &&
                 Password != '101458') {
                 alert('Check Your Username Or Password');
             } else if (Username == '4200202' && Password == '101351') {
-                window.open("result2.html");
+                window.open("4200202.html");
             } else if (Username == '4200202' && Password != '101351') {
                 alert('Check Your Username Or Password');
             } else {
