--- a/result3.html
+++ b/result3.html
@@ -8,7 +8,7 @@
     <title>Modern Academy Student Online Learning</title>
 </head>
 
-<body style="background-color:#F5F5F5;background-image: url('images/result1.png');background-size:cover; background-repeat: no-repeat;">
+<body style="background-color:#F5F5F5;background-image: url('images/KarimWaelGrades.png');background-size:cover; background-repeat: no-repeat;">
 
 </body>
 
