--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                             <input type="text" class="form-control rounded-left " placeholder="Username " id="usernameField" required>
                         </div>
                         <div class="form-group d-flex ">
-                            <input type="password" class="form-control rounded-left" id="password" name="password" placeholder="Password" required="">
+                            
+                            <input type="password" class="form-control rounded-left" id="passwordField" name="password" placeholder="Password" required="">
                         </div>
                         <div class="form-group d-md-flex ">
                             <div class="w-50 ">
