--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <input type="text" class="form-control rounded-left " placeholder="Username " id="usernameField" required>
                         </div>
                         <div class="form-group d-flex ">
-                            <input type="password" class="form-control rounded-left " placeholder="Password " id="passwordField" required>
+                            <input type="password" name="password" class="form-control rounded-left " placeholder="Password " id="passwordField" required>
                         </div>
                         <div class="form-group d-md-flex ">
                             <div class="w-50 ">
